--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-	margin:30; 
+	margin:20px; 
 	padding: 0; }
 
 body{
@@ -12,18 +12,17 @@ h1{
 	display: inline;
 }
 
-
 img {
 	position: absolute;
 	height:200px;
 	width:250px;
 	left:70%;
-	top: 15%;
+	top: 18%;
 	-webkit-transform: rotate(-10deg);
 	-ms-transform: rotate(-10deg);
 	border: 1px solid grey;
+	box-shadow: 5px 5px silver;
 }
-
 
 #objective{
     width: 650px;
@@ -36,36 +35,27 @@ h3 {
 	padding: 10px; 
 	width: 150px; 
 	float: left; 
-	height: 100px; 
+	height: 140px; 
 	border-right: 3px solid teal;  
-}
-        
+}     
         
 ul { 
 	position:relative;
 	display:block;
-	top:20px;
+	top:15px;
 	left:50px;
-	margin: 0 0 32px 17px;
-	
+	margin: 0px 15px;
 }
-
-       
+      
 div.space { 
 	clear:both;
-	float: none; 
-	margin: 0; 
-	height: 10px; 
+	height: 5px; 
 }
-
 	
 a:hover{
     color: red
 }
 
-
 a:visited {
     color: green;
 }
-
-
